# wagw-shimmy

./: .env.example  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
deploy/: README.md  agent.service  backup.sh  channels-env.awk  fleet.yaml  fleetctl  gowa.service  provision.sh  render-env.sh  tailscale-acl.hujson  tailscale-up.sh  wagw-shimmy.service
deploy/hermes-adapter/: README.md  adapter.py  wagw-hermes-adapter.service
deploy/tenants/: acme.yaml  wagw-1.yaml
deploy/tests/: checksum_verify.test.sh  fleetctl_boundary.test.sh  render_env_creds.test.sh
docs/: AGENT-WHATSAPP-CONTRACT.md  CHANNEL-CONNECTIONS.md  DECOMMISSION-BAE.md  FIRST-NUMBER.md  FLEET-ORCHESTRATION.md  GROUP-ADDRESSING.md  HARDENING.md  PAIRING.md  TESTING.md  acceptance-2026-06-14.md  readiness-remediation-2026-06-14T19-50-12+1000.md
fleetview/: Cargo.toml  README.md
fleetview/src/: main.rs  model.rs
src/: agent.rs  channel.rs  config.rs  dedup.rs  error.rs  forward.rs  gowa.rs  lib.rs  main.rs  media.rs  model.rs  policy.rs  ratelimit.rs  sent_ids.rs  server.rs  transcribe.rs
tests/: e2e.rs
tests/fixtures/: audio_dm.json  dm_text.json  document_dm.json  from_me_echo.json  group_text_plain.json  group_text_reply_to_bot.json  image_dm.json  reaction_dm.json  reaction_group_plain.json  reaction_to_bot.json
